--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/background"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
         android:theme="@style/Base.Theme.MaterialThemeBuilder"
         tools:targetApi="31">
 
         <activity
-
+            android:screenOrientation="portrait"
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -27,9 +27,18 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".ui.login.LoginActivity"/>
-        <activity android:name=".ui.home.HomeActivity"/>
-        <activity android:name=".ui.orders.OrdersActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.login.LoginActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.home.HomeActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.orders.OrdersActivity"/>
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".ui.order_details.OrderDetailsActivity"/>
 
     </application>
 
